--- a/app/globals.css
+++ b/app/globals.css
@@ -1,447 +1,450 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: auto;
-    left: 0;
-    right: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
-    background-image: url(images/pattern.webp);
-  }
-  
-  /*.disclaimer,
-  img[alt*="000webhost"],
-  img[alt*="000webhost"][style],
-  img[src*="000webhost"],
-  img[src*="000webhost"][style],
-  body>div:nth-last-of-type(1)[style] {
-    opacity: 0;
-    pointer-events: none;
-    width: 0px;
-    height: 0px;
-    visibility: hidden;
-    display: none;
-  }*/
-  
-  #tytul {
-    text-align: center;
-    background-color: #99ff99;
-    padding: 7em 1em .5em 1em;
-  
-  }
-  
-  h1 {
-    font-size: 30px;
-  }
-  
-  .input {
-    text-align: center;
-    width: 8em;
-    height: 1.8em;
-    color: #0077FF;
-    font-weight: bold;
-    font-size: 1.2em;
-    outline: none;
-    letter-spacing: 3px;
-    transition: .5s;
-    border-radius: .35em;
-    margin-top: .5em;
-    border: none;
-  }
-  
-  .input:focus {
-    box-shadow: 0px 0px 15px black;
-  }
-  
-  .input:hover {
-    cursor: pointer;
-  }
-  
-  .wynik {
-    margin: auto;
-    left: 0;
-    right: 0;
-    margin-top: 0;
-    position: fixed;
-    font-size: 1.3em;
-    background-color: #94FD37;
-    padding: 10px;
-    box-shadow: 0px 0px 15px;
-    text-shadow: 3px 3px 5px grey;
-    font-weight: 700;
-    background-image: linear-gradient(to right, #222, #54AD00, #94FD37, #90FF50, #AAFFAA, #90FF50, #94FD37, #54AD00, #222);
-    z-index: 99;
-  }
-  
-  
-  #list {
-    display: flex;
-    flex-wrap: wrap;
-    flex-shrink: 20px;
-    align-content: space-between;
-    justify-content: space-evenly;
-    padding: 2em;
-    font-weight: 300;
-  }
-  
-  footer {
-    padding-top: 2em;
-    padding-bottom: 1em;
-    color: white;
-    font-size: 0.8em;
-    line-height: 1.7em;
-    background-color: #444;
-  }
-  
-  .box {
-    text-align: left;
-    padding-left: 2em;
-    padding-bottom: 1em;
-  }
-  
-  #box,
-  #ppk,
-  #u26,
-  #workplace {
-    margin-right: 1em;
-    height: 2em;
-    width: 2em;
-  }
-  
-  .span {
-    font-weight: bold;
-    color: #99ff99;
-    letter-spacing: 1px;
-  }
-  
-  .img {
-    width: 5.5em;
-    height: 5.5em;
-    margin-top: -1em;
-  }
-  
-  .list {
-    padding: 2% 10%;
-    background-color: white;
-    text-align: left;
-  }
-  
-  .count {
-    text-align: right;
-    padding-left: 10px;
-    padding-right: 5px;
-    letter-spacing: 1px;
-    font-weight: bold;
-  }
-  
-  #constInp {
-    padding: 2em;
-    font-weight: 600;
-    max-width: 60em;
-    border: solid 1px;
-    border-radius: .35em;
-    margin: auto;
-    margin-top: 3em;
-    margin-bottom: 2em;
-  }
-  
-  .icon {
-    width: 1.5em;
-    height: 1.5em;
-    margin-bottom: -3px;
-    background-color: white;
-    padding: 2px;
-  }
-  
-  #list li {
-    padding: 1em;
-    border: 1px solid;
-    margin: 1em;
-    border-radius: .5em;
-    flex-grow: 1;
-  }
-  
-  .small {
-    font-size: 12px;
-    text-align: left;
-  }
-  
-  
-  .desc {
-    left: 0;
-    right: 0;
-    margin: auto;
-    text-align: left;
-    padding: 1em;
-    max-width: 800px;
-    line-height: 1.5em;
-  }
-  
-  p {
-    padding: .5em;
-  }
-  
-  ::placeholder {
-    color: #111;
-    opacity: 1;
-  }
-  
-  legend {
-    padding: 1em;
-  }
-  
-  fieldset {
-    max-width: 90%;
-    width: max-content;
-    padding-left: 1em;
-    padding-right: 2em;
-    border-radius: .5em;
-    margin-bottom: 1em;
-    margin: auto;
-  }
-  
-  #town {
-    color: blue;
-    font-weight: bolder;
-  }
-  
-  .menu {
-    display: flex;
-    flex-wrap: wrap;
-    flex-shrink: 20px;
-    align-content: space-between;
-    justify-content: space-evenly;
-    list-style-type: none;
-    margin-left: -32px;
-  }
-  
-  ul li {
-    padding: 10px;
-    background-color: white;
-    margin: 10px;
-    font-weight: 300;
-    min-width: 17em;
-    border-radius: .35em;
-    text-align: center;
-    text-transform: uppercase;
-    border: 1px solid;
-    cursor: pointer;
-    font-size: large;
-  }
-  
-  li a {
-    text-decoration: none;
-    color: black;
-  }
-  
-  .noMatch {
-    margin-top: 30vh;
-    font-size: large;
-  }
-  
-  
-  
-  
-  
-  #input,
-  #print,
-  #logInp {
-    text-align: left;
-    margin-left: 5lvw;
-    margin-top: 3lvw;
-    width: fit-content;
-    border: solid 1px;
-    padding: 5px;
-    border-radius: 5px;
-    max-width: 50%;
-  }
-  
-  #print {
-    max-width: 90%;
-  }
-  
-  button,
-  input {
-    padding: 3px;
-  }
-  
-  #title,
-  #month {
-    text-align: center;
-    padding: 1.5lvh;
-    font-size: 24px;
-  }
-  
-  #enploy {
-    margin-top: 2lvh;
-    margin-bottom: .5lvh;
-    line-height: 2.3lvh;
-    text-align: left;
-    margin-left: 8vw;
-    font-size: 18px;
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  margin: auto;
+  left: 0;
+  right: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
+  background-image: url(images/pattern.webp);
+}
+
+#tytul {
+  text-align: center;
+  background-color: #99ff99;
+  padding: 7em 1em .5em 1em;
+
+}
+
+h1 {
+  font-size: 30px;
+}
+
+.input {
+  text-align: center;
+  width: 8em;
+  height: 1.8em;
+  color: #0077FF;
+  font-weight: bold;
+  font-size: 1.2em;
+  outline: none;
+  letter-spacing: 3px;
+  transition: .5s;
+  border-radius: .35em;
+  margin-top: .5em;
+  border: none;
+}
+
+.input:focus {
+  box-shadow: 0px 0px 15px black;
+}
+
+.wynik {
+  margin: auto;
+  left: 0;
+  right: 0;
+  margin-top: 0;
+  position: fixed;
+  font-size: 1.3em;
+  background-color: #94FD37;
+  padding: 10px;
+  box-shadow: 0px 0px 15px;
+  text-shadow: 3px 3px 5px grey;
+  font-weight: 700;
+  background-image: linear-gradient(to right, #222, #54AD00, #94FD37, #90FF50, #AAFFAA, #90FF50, #94FD37, #54AD00, #222);
+  z-index: 99;
+}
+
+
+#list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-shrink: 20px;
+  align-content: space-between;
+  justify-content: space-evenly;
+  padding: 2em;
+  font-weight: 300;
+}
+
+footer {
+  padding-top: 2em;
+  padding-bottom: 1em;
+  color: white;
+  font-size: 0.8em;
+  line-height: 1.7em;
+  background-color: #444;
+}
+
+.box {
+  text-align: left;
+  padding-bottom: 1em;
+}
+
+#box,
+#ppk,
+#u26,
+#workplace {
+  margin-right: 1em;
+  height: 2em;
+  width: 2em;
+}
+
+.span {
+  font-weight: bold;
+  color: #99ff99;
+  letter-spacing: 1px;
+}
+
+.img {
+  width: 5.5em;
+  height: 5.5em;
+  margin-top: -1em;
+}
+
+.list {
+  padding: 2% 10%;
+  background-color: white;
+  text-align: left;
+}
+
+.count {
+  text-align: right;
+  padding-left: 10px;
+  padding-right: 5px;
+  letter-spacing: 1px;
+  font-weight: bold;
+}
+
+#constInp {
+  padding: 2em;
+  font-weight: 600;
+  max-width: 60em;
+  border: solid 1px;
+  border-radius: .35em;
+  margin: auto;
+  margin-top: 3em;
+  margin-bottom: 2em;
+}
+
+.icon {
+  width: 1.5em;
+  height: 1.5em;
+  margin-bottom: -3px;
+  background-color: white;
+  padding: 2px;
+}
+
+.icon[alt='wind'],
+[alt='visibillity'] {
+  margin-left: 2em;
+}
+
+#list li {
+  padding: 1em;
+  border: 1px solid;
+  margin: 1em;
+  border-radius: .5em;
+  flex-grow: 1;
+}
+
+.small {
+  font-size: 12px;
+  text-align: left;
+}
+
+
+.desc {
+  left: 0;
+  right: 0;
+  margin: auto;
+  text-align: left;
+  padding: 1em;
+  max-width: 800px;
+  line-height: 1.5em;
+}
+
+p {
+  padding: .5em;
+}
+
+::placeholder {
+  color: #111;
+  opacity: 1;
+}
+
+legend {
+  padding: 1em;
+}
+
+fieldset {
+  max-width: 90%;
+  width: max-content;
+  padding-left: 1em;
+  padding-right: 2em;
+  border-radius: .5em;
+  margin-bottom: 1em;
+  margin: auto;
+}
+
+#town {
+  color: blue;
+  font-weight: bolder;
+}
+
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  flex-shrink: 20px;
+  align-content: space-between;
+  justify-content: space-evenly;
+  list-style-type: none;
+}
+
+ul li {
+  padding: 10px;
+  background-color: white;
+  margin: 10px;
+  font-weight: 300;
+  min-width: 17em;
+  border-radius: .35em;
+  text-align: center;
+  text-transform: uppercase;
+  border: 1px solid;
+  font-size: large;
+}
+
+li a {
+  text-decoration: none;
+  color: black;
+}
+
+.noMatch {
+  margin-top: 30vh;
+  font-size: large;
+}
+
+#input,
+#print,
+#logInp {
+  text-align: left;
+  margin-left: 5lvw;
+  margin-top: 2em;
+  width: fit-content;
+  border: solid 1px;
+  padding: 5px;
+  border-radius: 5px;
+  max-width: 50%;
+  font-size: 0.8em;
+}
+
+#file {
+  font-size: .9em;
+}
+
+#print {
+  max-width: 90%;
+}
+
+button,
+input {
+  padding: 3px;
+  cursor: pointer;
+}
+
+#title,
+#month {
+  text-align: center;
+  padding: 7px;
+  font-size: 20px;
+}
+
+#enploy {
+  margin-top: 2lvh;
+  margin-bottom: .5lvh;
+  line-height: 2.3lvh;
+  text-align: left;
+  margin-left: 8vw;
+  font-size: 18px;
+}
+
+table {
+  margin-left: 0;
+  margin-right: 0;
+  margin: auto;
+  border-collapse: collapse;
+}
+
+.list>table {
+  margin-left: 0;
+}
+
+.list>table td {
+  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+td {
+  border: solid 1px;
+  padding-left: 1px;
+  padding-right: 1px;
+}
+
+th {
+  border: solid 2px;
+  padding: 3px;
+}
+
+#uwagi {
+  width: 20vw;
+}
+
+#logo {
+  position: absolute;
+  right: 15px;
+  margin-top: 15px;
+  width: 150px;
+  max-height: 180px;
+  height: auto;
+}
+
+.holyday {
+  background-color: lightsalmon;
+}
+
+.saturday {
+  background-color: lightblue;
+}
+
+#sign {
+  position: relative;
+  line-height: 1lvh;
+  margin-top: 6lvh;
+  text-align: right;
+  align-content: right;
+  margin-right: 8vw;
+}
+
+.noborder {
+  border: none;
+  text-align: end;
+}
+
+#link {
+  text-align: left;
+  margin-top: 15px;
+}
+
+a {
+  text-decoration: none;
+}
+
+hr {
+  border-top: dashed 2px;
+}
+
+.hr {
+  width: 70%;
+}
+
+#sign_hr {
+  position: absolute;
+  right: 0;
+  bottom: 14px;
+  width: 50%;
+}
+
+.counts {
+  background-color: rgba(242, 239, 233, .2);
+  font-size: .8rem;
+  padding: 0 10px;
+  border-radius: 10px;
+  box-shadow: inset 0px 0px 20px #bbb;
+  border: 0;
+}
+
+.legend {
+  background-color: white;
+  order: 1px solid;
+  padding: 5px 15px 5px 15px;
+  font-size: .8rem;
+  font-weight: 400;
+  box-shadow: inset 0px 0px 15px #c8c8c8;
+  border-radius: 5px;
+  letter-spacing: 2px;
+}
+
+.counters {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.hand {
+  margin: 3px;
+  padding: 5px;
+  font-size: 1rem;
+  min-width: 70px;
+  border-radius: 5px;
+  margin: 5px;
+  border: none;
+}
+
+@media only screen and (min-width:1220px) {
   table {
-    margin-left: 0;
-    margin-right: 0;
-    margin: auto;
-    border-collapse: collapse;
+    width: 800px;
   }
-  
-  .list>table {
-    margin-left: 0;
-  }
-  
-  .list>table td {
-    padding: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-  
-  td {
-    border: solid 1px;
-    padding-left: 1px;
-    padding-right: 1px;
-  }
-  
-  th {
-    border: solid 2px;
-    padding: 3px;
-  }
-  
-  #uwagi {
-    width: 20vw;
-  }
-  
-  #logo {
-    position: absolute;
-    right: 15px;
-    width: 150px;
-    max-height: 180px;
-    height: auto;
-  }
-  
-  .holyday {
-    background-color: lightsalmon;
-  }
-  
-  .saturday {
-    background-color: lightblue;
-  }
-  
-  #sign {
-    position: relative;
-    line-height: 1lvh;
-    margin-top: 6lvh;
-    text-align: right;
-    align-content: right;
-    margin-right: 8vw;
-  }
-  
-  .noborder {
-    border: none;
-    text-align: end;
-  }
-  
-  #link {
-    text-align: left;
-    margin-top: 15px;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  hr {
-    border-top: dashed 2px;
-  }
-  
+
   .hr {
     width: 70%;
   }
-  
+
   #sign_hr {
-    position: absolute;
-    right: 0;
-    bottom: 14px;
-    width: 50%;
+    width: 30%;
   }
-  
-  .counts {
-    background-color: rgba(242, 239, 233, .2);
-    font-size: 1rem;
-    padding: 0 20px;
-    border-radius: 10px;
-    box-shadow: inset 0px 0px 20px #bbb;
-    border: 0;
-    margin-left: 0px;
+}
+
+@media print {
+  body {
+    margin: 0;
+    padding: 0;
+    background-image: none;
   }
-  
-  .legend {
-    background-color: white;
-    order: 1px solid;
-    padding: 5px 15px 5px 15px;
-    font-size: .8rem;
-    font-weight: 400;
-    box-shadow: inset 0px 0px 15px #c8c8c8;
-    border-radius: 5px;
-    letter-spacing: 2px;
+
+  @page {
+    size: auto;
+    margin: 1cm;
   }
-  
-  @media only screen and (min-width:1220px) {
-    table {
-      width: 800px;
-    }
-  
-    .hr {
-      width: 70%;
-    }
-  
-    #sign_hr {
-      width: 30%;
-    }
+
+  #print,
+  #input,
+  #logInp,
+  #link,
+  article,
+  header {
+    display: none;
   }
-  
-  @media print {
-    body {
-      margin: 0;
-      padding: 0;
-      background-image: none;
-    }
-  
-    @page {
-      size: auto;
-      margin: 1cm;
-    }
-  
-    #print,
-    #input,
-    #logInp,
-    #link,
-    .desc {
-      display: none;
-    }
-  
-    table {
-      height: 66dvh;
-      width: 85vw;
-    }
-  
-    #title,
-    #month {
-      height: 4dvh;
-    }
-  
-    .content {
-      page-break-inside: avoid;
-    }
-  
-    * {
-      -webkit-print-color-adjust: exact !important;
-      print-color-adjust: exact !important;
-    }
+
+  table {
+    height: 66dvh;
+    width: 85vw;
   }
+
+  #title,
+  #month {
+    height: 4dvh;
+  }
+
+  .content {
+    page-break-inside: avoid;
+  }
+
+  * {
+    -webkit-print-color-adjust: exact !important;
+    print-color-adjust: exact !important;
+  }
+}
