--- a/app/modules/StarRating.module.css
+++ b/app/modules/StarRating.module.css
@@ -1,29 +1,33 @@
 .ratingContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
-  }
-  
-  .stars {
-    cursor: pointer;
-  }
-  
-  .star {
-    font-size: 2rem;
-    color: #ddd;
-    transition: color 0.2s;
-  }
-  
-  .star.filled {
-    color: #ffd700;
-  }
-  
-  .star:hover {
-    color: #ffd700;
-  }
-  
-  .stats {
-    font-size: 0.9rem;
-    color: #666;
-  }
+  right: 0;
+  left: 0;
+  margin: auto;
+  background-color: white;
+  width: fit-content;
+  padding: 0 20px 5px 20px;
+  border: solid 1px;
+  border-radius: .35em;
+}
+
+.stars {
+  cursor: pointer;
+}
+
+.star {
+  font-size: 1.5rem;
+  color: #ddd;
+  transition: color 0.2s;
+}
+
+.star.filled {
+  color: #ffd700;
+}
+
+.star:hover {
+  color: #ffd700;
+}
+
+.stats {
+  font-size: 0.9rem;
+  color: #666;
+}
