--- a/app/modules/StarRating.module.css
+++ b/app/modules/StarRating.module.css
@@ -2,25 +2,31 @@
   right: 0;
   left: 0;
   margin: auto;
-  background-color: white;
   width: fit-content;
-  padding: 0 20px 5px 20px;
-  border: solid 1px;
-  border-radius: .35em;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .stars {
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  touch-action: manipulation;
 }
 
 .star {
-  font-size: 1.5rem;
-  color: #ddd;
+  font-size: 2.5rem;
+  color: whitesmoke;
   transition: color 0.2s;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .star.filled {
-  color: #ffd700;
+  color: goldenrod;
 }
 
 .star:hover {
@@ -29,5 +35,9 @@
 
 .stats {
   font-size: 0.9rem;
-  color: #666;
+  color: black;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
