--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,7 @@ a, span{
   -ms-user-select: none;
   user-select: none;
   touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .input {
