--- a/app/modules/StarRating.module.css
+++ b/app/modules/StarRating.module.css
@@ -28,18 +28,10 @@
   display: inline-block;
   width: 2rem;
   height: 2rem;
-  background: linear-gradient(to right, gold var(--fill), #ddd var(--fill));
+  background: linear-gradient(to right, goldenrod var(--fill), white var(--fill));
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-
-.star.filled {
-  color: goldenrod;
-}
-
-.star:hover {
-  color: #ffd700;
 }
 
 .stats {
