--- a/app/globals.css
+++ b/app/globals.css
@@ -441,7 +441,8 @@ a:visited {
   article,
   header,
   .cookies,
-  .footer {
+  .footer,
+  .adsense, .ads, [class*="ad-"], [id*="ad-"], [class*="ns-"] {
     display: none;
   }
 
