--- a/app/globals.css
+++ b/app/globals.css
@@ -443,7 +443,7 @@ a:visited {
   .cookies,
   .footer,
   .adsense, .ads, [class*="ad-"], [id*="ad-"], [class*="ns-"] {
-    display: none;
+    display: none !important;
   }
 
   table {
