--- a/app/globals.css
+++ b/app/globals.css
@@ -442,7 +442,7 @@ a:visited {
   header,
   .cookies,
   .footer,
-  .adsense, .ads, [class*="ad-"], [id*="ad-"], [class*="ns-"] {
+  ins, .adsense, .ads, [class*="ad-"], [id*="ad-"], [class*="ns-"] {
     display: none !important;
   }
 
