--- a/app/globals.css
+++ b/app/globals.css
@@ -410,6 +410,10 @@ a:visited {
   color: blue;
 }
 
+.ipr-container{
+  display: none;
+}
+
 @media only screen and (min-width:1220px) {
   table {
     width: 800px;
