--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
-  background-image: url(images/pattern.webp);
+  /*background-image: url(images/pattern.webp);*/
   display: flex;
   flex-direction: column;
   min-height: 100vh;
